added the BreadcrumbList types and itemListElements for the brand-box

--- a/index.html
+++ b/index.html
@@ -6,5 +6,59 @@
     <link rel="stylesheet" href="/css/main.css"/>
     <title>DOKUA TEST</title>
   </head>
-  <body>Initial</body>
+  <body> 
+    <div class="brands-box" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList">
+      <h1 class="heading-primary" itemprop="name">Мы продаем запчасти для <br> следующих марок автомобилей:</h1>
+      <ul class="brands-box__list" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList">
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Audi</span>
+            <meta itemprop="position" content="1"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Ford</span>
+            <meta itemprop="position" content="2"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Mazda</span>
+            <meta itemprop="position" content="3"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Peugeot</span>
+            <meta itemprop="position" content="4"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Subaru</span>
+            <meta itemprop="position" content="5"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">BMW</span>
+            <meta itemprop="position" content="6"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Kia</span>
+            <meta itemprop="position" content="7"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Nissan</span>
+            <meta itemprop="position" content="8"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Skoda</span>
+            <meta itemprop="position" content="9"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Volkswagen</span>
+            <meta itemprop="position" content="10"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Fiat</span>
+            <meta itemprop="position" content="11"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Lexus</span>
+            <meta itemprop="position" content="12"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Opel</span>
+            <meta itemprop="position" content="13"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">SsangYong</span>
+            <meta itemprop="position" content="14"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Volvo</span>
+            <meta itemprop="position" content="15"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Masserati</span>
+            <meta itemprop="position" content="16"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Audi</span>
+            <meta itemprop="position" content="17"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Mazda</span>
+            <meta itemprop="position" content="18"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Honda</span>
+            <meta itemprop="position" content="19"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Mercedes</span>
+            <meta itemprop="position" content="20"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Renault</span>
+            <meta itemprop="position" content="21"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Suzuki</span>
+            <meta itemprop="position" content="22"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Chevrolet</span>
+            <meta itemprop="position" content="23"/></a></li>
+        <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Renault</span>
+            <meta itemprop="position" content="24"/></a></li>
+      </ul>
+    </div>
+  </body>
 </html>
