added a brands-box layouts component

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body> 
     <div class="brands-box" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList">
-      <h1 class="heading-primary" itemprop="name">Мы продаем запчасти для <br> следующих марок автомобилей:</h1>
+      <h1 class="heading-primary mb-7per" itemprop="name">Мы продаем запчасти для <br> следующих марок автомобилей:</h1>
       <ul class="brands-box__list" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList">
         <li class="brands-box__item" itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"><a class="brands-box__link" href="#" itemprop="item"> <span itemprop="name">Audi</span>
             <meta itemprop="position" content="1"/></a></li>
